Use JDK_JAVA_OPTIONS to handle all Java versions
The JDK_JAVA_OPTIONS is passed to Java 9+ only, so by using this
environment variable, there is no need to use the Java version detection
script.